<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        style="@style/container"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/idade"
            />
        <EditText
            style="@style/edit_text"
            android:id="@+id/idade"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/peso"
            />
        <EditText
            style="@style/edit_text"
            android:id="@+id/peso"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/altura"
            />
        <EditText
            style="@style/edit_text"
            android:id="@+id/altura"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/sexo"
            />
        <RadioGroup
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            >
            <RadioButton
                android:id="@+id/feminino"
                android:text="@string/feminino"
                />
            <RadioButton
                android:id="@+id/masculino"
                android:text="@string/masculino"
                />
        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/tipo_de_diabetes"
            />
        <RadioGroup
            android:id="@+id/diabetes"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            >
            <RadioButton
                android:id="@+id/diabetes1"
                android:text="@string/tipo_1"
                />
            <RadioButton
                android:id="@+id/diabetes2"
                android:text="@string/tipo_2"
                />
        </RadioGroup>

        <Button
            style="@style/action_button"
            android:id="@+id/salvar_dados"
            android:layout_marginTop="10dp"
            android:text="@string/salvar"
            />
    </LinearLayout>
</ScrollView>