<?xml version="1.0" encoding="utf-8"?>
<br.com.caelum.diabetes.dashboard.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/blue" >

   	<Button
   	    style="@style/dashboard_button" 
        android:drawableTop="@drawable/calculadora"
        android:text="@string/calculadora"
        android:id="@+id/main_calculadora" />
    <Button 
        style="@style/dashboard_button" 
        android:drawableTop="@drawable/lembretes"
        android:text="@string/lembretes"
        android:id="@+id/main_lembretes" />
    <Button 
        style="@style/dashboard_button" 
        android:drawableTop="@drawable/medicao"
        android:text="@string/glicemia"
        android:id="@+id/main_glicemia" />    
    <Button 
        style="@style/dashboard_button" 
        android:drawableTop="@drawable/exames"
        android:text="@string/exames"
        android:id="@+id/main_exames"/>
    <Button 
        style="@style/dashboard_button" 
        android:drawableTop="@drawable/estatistica"
        android:text="@string/estat_sticas"
        android:id="@+id/main_estatisticas" />
	<Button 
	    style="@style/dashboard_button" 
        android:drawableTop="@drawable/perfil"
        android:text="@string/perfil"
        android:id="@+id/main_perfil" />

</br.com.caelum.diabetes.dashboard.DashboardLayout>