<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        style="@style/container"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/cafe_da_manha"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/unidade"
            android:id="@+id/valor_cafe_continua"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/lanche_da_manha"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/unidade"
            android:id="@+id/valor_lanche_manha_continua"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/almoco"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/unidade"
            android:id="@+id/valor_almoco_continua"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/lanche_da_tarde"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/unidade"
            android:id="@+id/valor_lanche_tarde_continua"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/jantar"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/unidade"
            android:id="@+id/valor_jantar_continua"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ceia"
            />
        <EditText
            style="@style/edit_text"
            android:id="@+id/valor_ceia_continua"
            android:inputType="number"
            android:hint="@string/unidade"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/madrugada"
            />
        <EditText
            style="@style/edit_text"
            android:id="@+id/valor_madrugada_continua"
            android:inputType="number"
            android:hint="@string/unidade"
            />
        <Button
            style="@style/action_button"
            android:id="@+id/salvar_insulina_continua"
            android:text="@string/salvar"
            />
    </LinearLayout>
</ScrollView>