<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    style="@style/container"
    >
	
    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:text="@string/novo_alimento"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:text="@string/nome_alimento"
        />
    
    <EditText
        android:hint="@string/nome_alimento"
        android:id="@+id/nome_alimento"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:textColorHint="@color/divider"
        />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:text="@string/unidade_de_medida"
        />
    
    <AutoCompleteTextView
        android:completionThreshold="1"
        android:hint="@string/ex_colher_de_cha_concha_unidade"
        android:id="@+id/unidade_novo_alimento"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:textColorHint="@color/divider"
        />
    
    <TextView 
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:text="@string/carboidrato"
        />
    
    <EditText
        android:hint="@string/quantidade_de_gramas_de_cho"
        android:id="@+id/carboidrato_novo_alimento"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/divider"
        />
    
    <Button
        android:background="@color/accent"
        android:id="@+id/salvar_alimento"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/salvar_alimento"
        android:textColor="@color/icons"
        />
    
</LinearLayout>