<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <br.com.caelum.diabetes.dashboard.DashboardLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@color/blue" >
		
	    <Button
	        style="@style/dashboard_button" 
	        android:text="@string/dados_pessoais"
	        android:id="@+id/perfil_dados"/>
	    <Button
	        style="@style/dashboard_button" 
	        android:text="@string/basal"
	        android:id="@+id/perfil_basal"/>
	    <Button
	        style="@style/dashboard_button" 
	        android:text="@string/bolus"
	        android:id="@+id/perfil_bolus"/>
	    <Button
	        style="@style/dashboard_button" 
	        android:text="@string/glicemia_alvo"
	        android:id="@+id/perfil_glicemia_alvo"/>
	    
	</br.com.caelum.diabetes.dashboard.DashboardLayout>
</LinearLayout>
