<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	>
    <LinearLayout
        style="@style/container"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:text="@string/cafe_da_manha"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/mg_dl"
            android:id="@+id/valor_cafe_glicemia"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/almoco"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/mg_dl"
            android:id="@+id/valor_almoco_glicemia"
            android:inputType="number"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/jantar"
            />
        <EditText
            style="@style/edit_text"
            android:hint="@string/mg_dl"
            android:id="@+id/valor_jantar_glicemia"
            android:inputType="number"
            />

        <Button
            style="@style/action_button"
            android:id="@+id/salvar_dados_perfil_glicemia"
            android:text="@string/salvar"
            />
    </LinearLayout>
</ScrollView>