<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/medias"
        android:textAllCaps="true"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    
    <LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        >
	    
	    <TextView 
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/hoje"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            />
	    <TextView 
		    android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/semana"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            />
		<TextView 
		    android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:text="@string/mes"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            />
	</LinearLayout>
	
	<LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
	    android:weightSum="3"
        >
		
		<Button
            android:background="@color/accent"
            android:id="@+id/media_glicemia_hoje"
            android:layout_height="60dp"
            android:layout_marginRight="60dp"
            android:layout_width="60dp"
            android:textColor="@color/icons"
            />
		<Button
            android:background="@color/accent"
            android:id="@+id/media_glicemia_semana"
            android:layout_height="60dp"
            android:layout_marginRight="60dp"
            android:layout_width="60dp"
            android:textColor="@color/icons"
            />
		<Button
            android:background="@color/accent"
            android:id="@+id/media_glicemia_mes"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:textColor="@color/icons"
            />
	</LinearLayout>
	
	<LinearLayout
	    style="@style/container"
        >
		<Button
            android:id="@+id/nova_medicao"
            android:text="@string/nova_glicemia"
            style="@style/dashboard_button"
            />
		
		<Button
            android:id="@+id/lista_glicemias"
            android:text="@string/lista_glicemias"
            style="@style/dashboard_button"
            />
	</LinearLayout>
</LinearLayout>