<?xml version="1.0" encoding="utf-8"?>
<br.com.caelum.diabetes.dashboard.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/blue" >

	<Button 
	    android:layout_width="200dp"
		android:layout_height="wrap_content"
	    android:text="@string/nova_refeicao"
    	android:background="@drawable/botao_escuro"
	    android:textColor="#fff"
	    android:layout_marginBottom="40dp"
	    android:id="@+id/nova_refeicao"/>
	
	<Button 
	    android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:background="@drawable/botao_escuro"
	    android:textColor="#fff"
	    android:layout_marginBottom="40dp"
	    android:text="@string/listar_refeicoes"
	    android:id="@+id/listar_refeicoes"/>
	
	<Button 
	    android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:background="@drawable/botao_escuro"
	    android:textColor="#fff"
	    android:layout_marginBottom="40dp"
	    android:text="@string/adicionar_novo_alimento"
	    android:id="@+id/adicionar_novo_alimento"/>
</br.com.caelum.diabetes.dashboard.DashboardLayout>