<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10"
    >

    <EditText
        android:hint="@string/search_foods_hint"
        android:id="@+id/busca_alimento"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:textColor="@color/divider"
        />

    <TextView
        android:background="@color/icons"
        android:id="@+id/cadastrar_alimento"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/search_foods_title"
        android:textColor="@color/primary"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lista_busca_alimentos"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:scrollbarStyle="insideOverlay"
        />

    <LinearLayout
        android:gravity="bottom|end"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:drawablePadding="-5dp"
            android:id="@+id/cancelar_alimentos"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:text="@string/cancelar"
            android:textColor="@color/icons"
            />
        <Button
            style="@style/action_button"
            android:id="@+id/conclui_alimentos"
            android:layout_weight="1"
            android:text="@string/concluido"
            />
    </LinearLayout>
</LinearLayout>