<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/container"
    >
        <TextView
            android:text="@string/dados_medicos_aviso"
            style="@style/edit_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10"
            >
            <Button
                android:id="@+id/confirmar_button"
                android:text="@string/confirmar_dados_medicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:background="@color/accent"
                android:textColor="@color/white"
                android:layout_weight="6"
                />

            <Button
                android:id="@+id/cancelar_button"
                android:text= "@string/cancelar_dados_medicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:layout_weight="4"
                />
        </LinearLayout>
</LinearLayout>
