<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/container"
    android:gravity="center_horizontal"
    >
    
    <LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        >
        
        <TextView
            android:drawableLeft="@drawable/clock"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:id="@+id/hora_lembrete"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
	        />
        
        <TextView
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:id="@+id/data_lembrete"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </LinearLayout>
    
    <TextView
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:text="Lembrete:"
        />
    
    
    <EditText
        style="@style/edit_text"
        android:hint="@string/exemplo"
        android:id="@+id/atividade_lembrete"
        android:inputType="textCapSentences"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/anotacoes"
        />

    <EditText
        style="@style/edit_text"
        android:id="@+id/anotacoes_lembrete"
        android:inputType="textCapSentences"
        />

    <Button
        android:background="@color/accent"
        android:id="@+id/salvar_lembrete"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:text="@string/salvar"
        android:textColor="@color/icons"
        />
</LinearLayout>
